--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ h1{
 
 
     .cards{
-        margin-top: 5px;
+        /* margin-top: 5px; */
         gap: 1rem;
         display: grid;
     }
